--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <body>
         <form action="">
             <fieldset>
-                <legend>New User Signup</legend>
+                <legend>New User Signup: </legend>
 
                 <div>
                     <label for="name">Name: </label>
@@ -21,11 +21,11 @@
                 </div>
                 <div>
                     <label for="age">Age: </label>
-                    <input type="text" name="age" id="age">          
+                    <input type="text" name="age" id="age" class="half-width">          
                 </div>
                 <div>
                     <label for="personality">Personality type: </label>
-                    <input type="text" name="personality" id="personality"> 
+                    <input type="text" name="personality" id="personality" class="half-width"> 
                     (<span>Don't know your type?</span>)
                 </div>
     
@@ -38,10 +38,10 @@
                     </select>
                 </div>
                 <div>            
-                    Seeking age:             
-                    <input type="text" id="min" name="min" placeholder="min">
-                    to                   
-                    <input type="text" id="max" name="max" placeholder="max">
+                    <span>Seeking age:</span>
+                    <input type="text" id="min" name="min" placeholder="min" class="half-width">
+                    to                    
+                    <input type="text" id="max" name="max" placeholder="max" class="half-width">
     
                 </div>
                 <button>Sign Up</button>
