--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
                 <div>
                     <label for="personality">Personality type: </label>
                     <input type="text" name="personality" id="personality" class="half-width"> 
-                    (<span>Don't know your type?</span>)
+                    (<a href="http://www.humanmetrics.com/cgi-win/jtypes2.asp">Don't know your type?</a>)
                 </div>
     
                 <div>
